# Auto-Research-Molprop

./: .env.example  .gitignore  LICENSE  README.md  requirements-lock.txt  requirements.txt
agent_core/: benchmark_data.py  calibrate_baseline.py  task_adapter.py
analysis/: composition.py  cross_benchmark_profile.py  data_audit_table.py  findings.md  flaml_modelaxis.py  forecast_rule.py  foresight.py  gen_automl_md.py  gen_results_md.py  le30_one.py  make_figures.py  make_signature_figure.py  make_transfer_figures.py  mine_map.py  regime.py  tdc_axis_sweep.py  tdc_test_consolidate.py  tdc_test_final.py  tdc_test_sweep.py  tdc_traj.py  test_consolidate.py  test_eval.py
baselines/: chemberta_results.txt  run_pretrained_baseline.py
data/: README.md
multi_agent_drug/: .gitignore  __init__.py  benchmark_data.py  calibrate_baseline.py  dashboard.py  experiment.py  pyproject.toml  swarm_config.json  task_config.py
multi_agent_drug/agents/: base.py  calib.py  data.py  daugm.py  fphs.py  fsub.py  hooks.py  lit.py  meta.py  modl.py  prompts.py  runner.py
multi_agent_drug/harness/: __init__.py  blackboard.py  config.py  credentials.py  events.py  tracker.py
multi_agent_drug/knowledge/: INIT.md  LESSONS.md  SOTA_STACK.md  chemberta_baseline_scores.json
multi_agent_drug/pipeline/: __init__.py
multi_agent_drug/supervisor/: __main__.py  core.py  termination.py
multi_agent_drug/tools/: submit.py  workdir.py  write_external_data.py
multi_agent_molnet/: __init__.py  benchmark_data.py  calibrate_baseline.py  loader.py  task_config.py
multi_agent_polaris/: __init__.py  (+6 more)
(+69 files in other folders)
